fix publicly autocomplete suggestions overflow

--- a/client/src/components/Public/EntitySearchAutocomplete/EntitySearchAutocomplete.scss
+++ b/client/src/components/Public/EntitySearchAutocomplete/EntitySearchAutocomplete.scss
@@ -16,7 +16,7 @@
   }
 }
 .publicly-autocomplete-menu {
-  max-height: calc(100vh - 62px);
+  max-height: calc(100vh - 160px);
 }
 
 .input-group.autocomplete-holder > div:first-child {
